# example_pyproject

./: .gitignore  404.html  LICENSE.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yaml
docs/: index.md
search/: search_index.json
