[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project]
name = "example-pyproject"
version = "0.0.1"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
	{name = "Mads O'Brien", email= "maobrien@methanesat.org"}
]

[project.optional-dependencies]
docs = [
	"mkdocs-material",
]
